[package]
name = "particle_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
reqwest-eventsource = "0.4.0"
eventsource = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
url = "2.3.1"
futures-util = "0.3.26"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
