[package]
name = "particle_bridge"
version = "0.9.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
reqwest-eventsource = "0.4.0"
eventsource = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
url = "2.3.1"
futures-util = "0.3.26"
clap = { version = "4.0", features = ["derive"] }
config = "0.13.1"
tera = { version = "1", default-features = false }
env_logger = "0.10.0"
log = "0.4.17"

[dev-dependencies]
mockall = "0.11.4"
